--- a/templates/base.html
+++ b/templates/base.html
@@ -795,6 +795,26 @@
             </a>
         </li>
 
+        <!-- Documents -->
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="docsDropdown" role="button"
+                data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-file-earmark-text me-1"></i><span class="d-lg-inline">Documents</span>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="docsDropdown">
+                <li>
+                    <a class="dropdown-item" href="{{ url_for('documents_list') }}">
+                        <i class="bi bi-files me-2"></i>All Documents
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="{{ url_for('documents_upload') }}">
+                        <i class="bi bi-cloud-upload me-2"></i>Upload
+                    </a>
+                </li>
+            </ul>
+        </li>
+
         <!-- Team -->
         {% if session.user_role in ['admin', 'manager'] %}
         <li class="nav-item dropdown">
