--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -482,7 +482,7 @@
             outline: 0;
             box-shadow: 0 0 0 0.25rem rgba(52, 152, 219, 0.25);
             transform: translateY(-1px);
-            background-color: rgba(255, 255, 255, 1);
+            background-color: rgb(0, 0, 0);
         }
         
         .form-control:hover:not(:focus) {
