--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -157,7 +157,7 @@
                                     <div class="col-12 col-sm-6">
                                         <small class="text-muted d-block">
                                             <strong>Created:</strong><br class="d-sm-none"> 
-                                            <span class="d-none d-lg-inline">{{ user.created_at.strftime('%B %d, %Y at %I:%M %p') }}</span>
+                                            <span class="d-none d-lg-inline">{{ user.created_at.strftime('%B %d, %Y ') }}</span>
                                             <span class="d-lg-none">{{ user.created_at.strftime('%b %d, %Y') }}</span>
                                         </small>
                                     </div>
